@@ -1,4 +1,4 @@
-package TDUNU2025.Msbiblioteca.service.impl;
+package TDUNU2025.Msbiblioteca.service.impl; // 1. Paquete corregido a minúsculas
 
 import TDUNU2025.Msbiblioteca.exception.ResourceNotFoundException;
 import TDUNU2025.Msbiblioteca.model.entity.Catalogo;
@@ -8,13 +8,12 @@ import TDUNU2025.Msbiblioteca.repository.CatalogoRepository;
 import TDUNU2025.Msbiblioteca.service.CatalogoService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.cache.annotation.CacheEvict; // Importante
-import org.springframework.cache.annotation.Cacheable; // Importante
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,21 +22,23 @@ public class CatalogoServiceImpl implements CatalogoService {
     private final CatalogoRepository catalogoRepository;
     private final ModelMapper modelMapper;
 
-    // ⚡ REDIS: Si existe en caché "lista_catalogos", lo devuelve de ahí. Si no, va a BD.
     @Override
     @Transactional(readOnly = true)
     @Cacheable(value = "lista_catalogos") 
     public List<CatalogoResponse> listar() {
-        // Simulación de lentitud para que notes la diferencia (Quitar en producción)
-        try { Thread.sleep(2000); } catch (InterruptedException e) {} 
+        try { 
+            Thread.sleep(2000); 
+        } catch (InterruptedException e) {
+            // SOLUCIÓN A java:S2142: Restaurar el estado de interrupción
+            Thread.currentThread().interrupt(); 
+        } 
 
         List<Catalogo> catalogos = catalogoRepository.findAll();
         return catalogos.stream()
                 .map(c -> modelMapper.map(c, CatalogoResponse.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // ⚡ REDIS: Busca por ID especifico. La clave en Redis será "catalogo_1", "catalogo_2", etc.
     @Override
     @Transactional(readOnly = true)
     @Cacheable(value = "catalogo", key = "#id") 
@@ -47,7 +48,6 @@ public class CatalogoServiceImpl implements CatalogoService {
         return modelMapper.map(catalogo, CatalogoResponse.class);
     }
 
-    // 🧹 LIMPIEZA: Al guardar nuevo, borramos la lista completa del caché para que se actualice.
     @Override
     @Transactional
     @CacheEvict(value = "lista_catalogos", allEntries = true) 
@@ -59,7 +59,6 @@ public class CatalogoServiceImpl implements CatalogoService {
         return modelMapper.map(saved, CatalogoResponse.class);
     }
 
-    // 🧹 LIMPIEZA: Al actualizar, borramos la lista Y el ítem específico del caché.
     @Override
     @Transactional
     @CacheEvict(value = {"lista_catalogos", "catalogo"}, allEntries = true) 
@@ -74,7 +73,6 @@ public class CatalogoServiceImpl implements CatalogoService {
         return modelMapper.map(updated, CatalogoResponse.class);
     }
 
-    // 🧹 LIMPIEZA: Al eliminar, limpiamos el caché.
     @Override
     @Transactional
     @CacheEvict(value = {"lista_catalogos", "catalogo"}, allEntries = true)
