@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,7 +24,7 @@ public class MultaServiceImpl implements MultaService {
     public List<MultaResponse> listar() {
         return repo.findAll().stream()
                 .map(multa -> modelMapper.map(multa, MultaResponse.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
